bookinfo-mysql-ddbb/ossm/istio-system-custom/gw-tcp-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-default-egress
  namespace: istio-system
spec:
  selector:
    istio: default-egress
  servers:
  - hosts:
    - mysql.external
    port:
      name: tcp-8443
      number: 8443
      protocol: TCP
  - hosts:
    - mysql-3.external
    port:
      name: tcp-9443
      number: 9443
      protocol: TCP
