bookinfo-mysql-ddbb/ossm/istio-system-custom/dr-mysql-ddbb-3.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: egress-mysql-3
  namespace: istio-system
spec:
  host: mysql-3.external
  exportTo:
    - .
  subsets:
  - name: v2-mysql
    trafficPolicy:
      tls:
        mode: DISABLE
