bookinfo-mysql-ddbb/ossm/istio-system-custom/route-bookinfo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-custom-secure
  namespace: istio-system
spec:
  host: bookinfo-custom.secure.apps.myocp4.afe4.sandbox549.opentlc.com
  port:
    targetPort: https
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
  tls:
    termination: passthrough
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-custom
  namespace: istio-system
spec:
  host: bookinfo-custom.apps.myocp4.afe4.sandbox549.opentlc.com
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
